--- a/psOFF GUI/psOFF GUI.csproj
+++ b/psOFF GUI/psOFF GUI.csproj
@@ -21,4 +21,8 @@
     </COMReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="8.0.3" />
+  </ItemGroup>
+
 </Project>
